# feature-targeting

./: .gitignore  Cargo.toml  LICENSE  README.md
adapter-istio/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
adapter-istio/src/: features.rs  lib.rs  main.rs  server.rs
adapter-istio/template/: config.proto  config.proto_descriptor  feature-targeting-template.yaml  gen-proto.sh  generated_template.proto  generated_template.proto_descriptor  get-proto.sh  template.proto  template.proto_descriptor
adapter-proxy-wasm/: Cargo.toml  Makefile  README.md  filter-config.json
adapter-proxy-wasm/src/: lib.rs
data-plane/: Cargo.toml
data-plane/src/: features.rs  lib.rs
data-plane/src/features/: explicit.rs  implicit.rs  mod.rs
data-plane/src/features/expression/: mod.rs
examples/: README.md
examples/echo-service/: README.md
examples/mixer-adapter/1-init-cluster/: README.md  kind.sh
examples/mixer-adapter/2-enable-adapter/: README.md  feature-targeting-server.yaml  handler.yaml  instance.yaml
examples/todomvc/: README.md
examples/todomvc/api/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  schema.sql  sqlx-data.json
examples/todomvc/api/manifests/: Makefile  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtualservice.yaml
examples/todomvc/api/migrations/: 20201010142609_create_todos_table.sql
examples/todomvc/api/sql/: create.sql  delete.sql  find_all.sql  find_by_id.sql  update.sql
examples/todomvc/api/src/: db.rs  graphql.rs  jwt.rs  lib.rs  main.rs
examples/todomvc/api/wrk_scripts/: get_all.lua
examples/todomvc/web/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
examples/todomvc/web/client/: Cargo.toml  Makefile  index.html
examples/todomvc/web/client/graphql/: queries.graphql
examples/todomvc/web/client/src/: cookies.rs  lib.rs  session.rs
examples/todomvc/web/client/src/session/: auth.rs  mod.rs
examples/todomvc/web/graphql/: schema.graphql
examples/todomvc/web/manifests/: Makefile  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtualservice.yaml
examples/todomvc/web/server/: Cargo.toml  Makefile
examples/todomvc/web/server/src/: async_client.rs  main.rs
examples/todomvc/web/src/: lib.rs  session.rs
examples/wasm-envoy-filter/1-istio/: Makefile
examples/wasm-envoy-filter/1-istio/1-profile/: profile.yaml
examples/wasm-envoy-filter/1-istio/2-config/: kustomization.yaml
examples/wasm-envoy-filter/2-adapter/: README.md  envoy-filter.yaml  kustomization.yaml
feature-targeting-operator/: Cargo.toml  Dockerfile  Makefile  README.md
feature-targeting-operator/examples/: Makefile  feature-targeting-config-echo.yaml  kustomization.yaml
feature-targeting-operator/manifests/: Makefile  crd.yaml  deployment.yaml  example.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml
feature-targeting-operator/src/: crd.yaml  example.yaml  lib.rs  main.rs
proxy-wasm/: Makefile  README.md  envoy-bootstrap.yml  runtime-config.json
samples/: README.md
samples/2-enable-adapter/: README.md  feature-targeting-server.yaml  feature-targeting.yaml  kustomization.yaml
samples/adapter-istio/: README.md  deployment.yaml  feature-targeting-instance.yaml  feature-targeting-template.yaml  feature-targeting.yaml  handler.yaml  instance.yaml  kustomization.yaml  rule.yaml  service.yaml
samples/echo-server/: README.md  kustomization.yaml  virtualservice.yaml
samples/echo-service/: Makefile  README.md  deployment.yaml  kustomization.yaml  namespace.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  service.yaml  virtualservice.yaml
samples/hello-world/: README.md  echo.yaml  handler.yaml  instance.yaml  namespace.yaml  rule.yaml  virtualservice.yaml
samples/init-cluster/: README.md  controlplane.yaml  istio-delete.sh
samples/mixer-adapter/1-init-cluster/: README.md  istio.sh
samples/mixer-adapter/2-enable-adapter/: feature-targeting-template.yaml  feature-targeting.yaml
samples/todomvc/: .gitignore  Cargo.toml  README.md  index.html
samples/todomvc/graphql/: queries.graphql  schema.graphql
samples/todomvc/public/: styles.css
samples/todomvc/src/: auth.rs  lib.rs
samples/todomvc/static/: index.html
samples/todomvc_api/: Cargo.toml  README.md  schema.sql
samples/todomvc_api/migrations/2020-06-07-102348_create_todos/: up.sql
samples/todomvc_api/sql/: create.sql  delete.sql  find_by_id.sql
samples/todomvc_api/src/: api.rs  db.rs  graphql.rs  lib.rs  main.rs  models.rs  schema.rs
samples/todomvc_api_sqlx/: .env  Cargo.toml  schema.sql
samples/todomvc_api_sqlx/sql/: find_all.sql  update.sql
samples/todomvc_api_sqlx/src/: db.rs  graphql.rs  lib.rs  main.rs
samples/todomvc_api_sqlx/src/sql/: delete.sql  update.sql
samples/wasm-envoy-filter/1-istio/: Makefile  README.md  profile.yaml
samples/wasm-envoy-filter/1-istio/1-profile/: kustomization.yaml
samples/wasm-envoy-filter/1-istio/2-config/: gateway.yaml
samples/wasm-envoy-filter/2-adapter/: Makefile  README.md  envoy-filter.yaml
