[package]
name = "adapter-istio"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[dependencies]
tonic = "0.1.1"
prost = "0.6.1"
prost-types = "0.6.1"
tokio = { version = "0.2", features = ["macros"] }
regex = "1"

[dev-dependencies]
test-case = "1.0.0"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.1.1"
