[package]
name = "adapter-istio"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[dependencies]
tonic = "0.1.1"
prost = "0.6.1"
prost-types = "0.6.1"
tokio = { version = "0.2", features = ["macros"] }
data-plane = { path = "../data-plane" }

[build-dependencies]
tonic-build = "0.1.1"
