[package]
name = "proxy-wasm"
version = "0.1.0"
authors = ["Viktor Charypar <charypar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.8"
proxy-wasm = "0.1.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
data-plane = { path = "../data-plane" }
