[package]
name = "data-plane"
version = "0.1.0"
authors = ["Viktor Charypar <charypar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
regex = "1.3.9"
woothee = "0.11.0"
base64 = "0.12.3"

[dev-dependencies]
test-case = "1.0.0"
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"
