[package]
name = "feature_targeting_operator"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
k8s-openapi = { version = "0.8.0", default-features = false, features = [ "v1_15" ] }
log = "0.4.8"
roperator = "0.2.1"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
