[package]
name = "todomvc"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
enclose = "1.1.8"
graphql_client = "0.9.0"
indexmap = { version = "1.4.0", features = ["serde-1"] }
seed = "0.7.0"
serde = "1.0.112"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
