[package]
name = "todomvc"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#jsonwebtoken = "7.1.2"
anyhow = "1.0.31"
base64 = "0.12.2"
enclose = "1.1.8"
graphql_client = "0.9.0"
indexmap = { version = "1.4.0", features = ["serde-1"] }
seed = "0.7.0"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.55"
serde_urlencoded = "0.6.1"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
