[package]
name = "todomvc_api"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = { git="https://github.com/graphql-rust/juniper" }
lazy_static = "1.4.0"
smol = "0.1.11"
sqlx = { version = "0.3.5", features = [ "postgres", "macros" ] }
tide = "0.10.0"
