[package]
name = "todomvc_api"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-graphql = "1.15.15"
async-graphql-tide = "1.15.13"
dotenv = "0.15.0"
env_logger = "0.7.1"
http-types = "2.2.0"
smol = "0.1.14"
sqlx = { version = "0.3.5", features = [ "postgres", "macros", "uuid" ] }
tide = "0.11.0"
uuid = "0.8.1"
