[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "todomvc_api"
version = "0.1.0"

[dependencies]
anyhow = "1.0.33"
async-graphql = "1.18.2"
async-graphql-tide = "1.18.1"
async-std = {version = "1.6.5", features = ["attributes"]}
base64 = "0.13.0"
http-types = "2.5.0"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.58"
sqlx = {version = "0.4.0-beta.1", features = ["offline", "postgres", "macros", "uuid"]}
structopt = "0.3.19"
tide = "0.13.0"
uuid = "0.8.1"
