[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "todomvc_api"
version = "0.1.0"

[dependencies]
anyhow = "1.0.34" 
async-graphql = "2.1.2" 
async-graphql-tide = "2.1.2" 
async-std = {version = "1.7.0", features = ["attributes"]} 
base64 = "0.13.0" 
http-types = "2.8.0" 
serde = {version = "1.0.117", features = ["derive"]} 
serde_json = "1.0.59" 
sqlx = {version = "0.4.1", features = ["offline", "postgres", "macros", "uuid", "runtime-async-std-native-tls"]} 
structopt = "0.3.20" 
tide = "0.14.0" # locked to async-graphql-tide
uuid = "0.8.1"
