[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "todomvc_api"
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
async-graphql = "2.5.0"
async-graphql-tide = "2.5.0"
async-std = {version = "1.9.0", features = ["attributes"]}
base64 = "0.13.0"
http-types = "2.9.0"
serde = {version = "1.0.120", features = ["derive"]}
serde_json = "1.0.61"
sqlx = {version = "0.4.2", features = ["offline", "postgres", "macros", "uuid", "runtime-async-std-native-tls"]}
structopt = "0.3.21"
tide = "0.15.0"
uuid = "0.8.2"
