[package]
name = "todomvc"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.31"
base64 = "0.12.3"
graphql_client = "0.9.0"
indexmap = { version = "1.4.0", features = ["serde-1"] }
seed = "0.7.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde_urlencoded = "0.6.1"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = "0.2.64"
