[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "todomvc_web_client"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
graphql_client = "0.9.0"
indexmap = {version = "1.6.1", features = ["serde-1"]}
seed = "0.8.0"
serde = {version = "1.0.120", features = ["derive"]}
serde_json = "1.0.61"
serde_urlencoded = "0.7.0"
url = "2.2.0"
uuid = {version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"]}
wasm-bindgen = "0.2.69"

[profile.release]
lto = true
opt-level = 'z'
