[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "todomvc_web_server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.33"
async-std = {version = "1.6.5", features = ["attributes"]}
base64 = "0.13.0"
failure = "0.1.8"
http-types = {version = "2.5.0", features = ["hyperium_http"]}
openidconnect = {version = "1.0.1", features = ["futures-03"], default-features = false}
serde = "1.0.116"
serde_json = "1.0.58"
structopt = "0.3.19"
surf = "2.0.0"
thiserror = "1.0.21"
tide = "0.13.0"
time = "0.2.22"
url = "2.1.1"
