[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "todomvc_web_server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
async-std = {version = "1.9.0", features = ["attributes"]}
base64 = "0.13.0"
failure = "0.1.8"
http-types = {version = "2.9.0", features = ["hyperium_http"]}
openidconnect = "2.0.0-alpha.2"
serde = "1.0.120"
serde_json = "1.0.61"
structopt = "0.3.21"
surf = "2.1.0"
thiserror = "1.0.23"
tide = "0.15.0"
time = "0.2.24"
url = "2.2.0"
